# LLMOps-FlipKart-Product-Recommender

./: Dockerfile  README.md  app.py  flask-deployment.yaml  main.py  pyproject.toml  requirements.txt
flipkart/: README.md  config.py  data_converter.py  data_ingestion.py  rag_chain.py
grafana/: README.md  grafana-deployment.yaml
prometheus/: README.md  prometheus-configmap.yaml  prometheus-deployment.yaml
static/: README.md  style.css
templates/: README.md  index.html
utils/: README.md
